--- a/src/assets/css/material-dashboard-react.css
+++ b/src/assets/css/material-dashboard-react.css
@@ -480,4 +480,10 @@ footer ul li a:hover {
 }
 * {
   letter-spacing: normal !important;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
