--- a/src/assets/css/Global.css
+++ b/src/assets/css/Global.css
@@ -16,3 +16,25 @@ html {
 body {
   font-family: 'D2Coding';
 }
+
+html {
+  letter-spacing: normal !important;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+body,
+html {
+  letter-spacing: normal !important;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
+  display: none;
+}
