--- a/src/assets/css/material-dashboard-react.css
+++ b/src/assets/css/material-dashboard-react.css
@@ -478,3 +478,23 @@ footer ul li a:hover {
   right: auto;
   left: 80px;
 }
+
+body {
+  margin: 0px;
+}
+
+* {
+  letter-spacing: normal !important;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  background-color: rgba(0, 0, 0, 0);
+  width: 0.3rem;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 0.15rem;
+}
